[package]
name = "lilyenv"
version = "1.5.1"
authors = ["Lily Acorn"]
edition = "2024"
description = "A Python interpreter and virtualenv manager"
readme = "README.md"
repository = "https://github.com/LilyFoote/lilyenv"
keywords = ["python", "virtualenv"]
categories = ["command-line-utilities", "development-tools", "virtualization"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.5.2"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
current_platform = "0.2.0"
directories = "6.0.0"
flate2 = "1.1.2"
http = "1.3.1"
nom = "7.1.3"
octocrab = "0.44.1"
reqwest = { version = "0.12.23", features = ["blocking"] }
scraper = "0.22.0"
tar = "0.4.44"
thiserror = "2.0.16"
tokio = "1.47.1"
url = "2.5.7"
zstd = "0.13.3"
